fix part submit-and-feedback layout on narrow screens; toggle just reads "Feedback"
I thought that the "Show feedback" / "Hide feedback" text was visually working as a header, so should just say "Feedback".

--- a/themes/default/files/resources/exam.css
+++ b/themes/default/files/resources/exam.css
@@ -403,6 +403,16 @@ Copyright 2011-25 Newcastle University
         exam-container.show-nav #sideNav {
             border-width: 0;
         }
+
+        exam-container #questionDisplay > .question-wrapper > .question .parts .part .submit-and-feedback {
+            grid-template: 
+                "submit"
+                "score"
+                "messages"
+                / auto;
+            justify-items: start;
+            align-items: start;
+        }
     }
 
 
